Сохранение перед созданием выбора сервисов